refactor: rename download endpoint to /libraries/{library_id}/file for clarity
